--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,13 @@
 			
         }
     ],
-    "autoload": {
-      
-    },
+    
     "minimum-stability": "dev",
-   
-	
+    "require": {
+		"php": ">=5.1.0"
+	},
+	"support": {
+		"issues": "https://github.com/imadige/smceframework-MVC/issues?state=open",
+		"source": "https://github.com/imadige/smceframework-MVC"
+	},
 }
