--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "root/smce",
     "description": "SMCE Framework",
     "license": "MIT",
-     "authors": [
+    "authors": [
         {
 			"name": "Samed Ceylan",
             "email": "imadige@gmail.com"
@@ -10,16 +10,12 @@
         }
     ],
     "autoload": {
-      "classmap" : [
-		
-		]
+       "psr-2": {
+       }
     },
     "minimum-stability": "dev",
-    "require": {
-		"php": ">=5.1.0"
-	},
-	"support": {
-		"issues": "https://github.com/imadige/smceframework-MVC/issues?state=open",
-		"source": "https://github.com/imadige/smceframework-MVC"
-	},
+    "require": {}
+	
+	
+	
 }
