--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,14 @@
     "autoload": {
       
     },
+    
     "minimum-stability": "dev",
-    "require": {}
-	
-	
+    "require": {
+		"php": ">=5.1.0"
+	},
+	"support": {
+		"issues": "https://github.com/imadige/smceframework-MVC/issues?state=open",
+		"source": "https://github.com/imadige/smceframework-MVC"
+	},
 	
 }
