--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     "autoload": {
       
     },
-    
     "minimum-stability": "dev",
-    "require": {
-		"php": ">=5.1.0"
-	},
+    "require": {}
+	
+	
+   
 	"support": {
 		"issues": "https://github.com/imadige/smceframework-MVC/issues?state=open",
 		"source": "https://github.com/imadige/smceframework-MVC"
