--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,11 @@
 	
     "minimum-stability": "dev",
     "require": {
-		"php": ">=5.1.0"
+		"php": ">=5.1.0",
 	},
-	
+	"support": {
+		"issues": "https://github.com/imadige/smceframework-MVC/issues?state=open",
+		"source": "https://github.com/imadige/smceframework-MVC"
+	},
 	
 }
