--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "root/smce",
     "description": "SMCE Framework",
+	"keywords": ["smce", "framework"],
     "license": "MIT",
     "authors": [
         {
@@ -13,10 +14,9 @@
       
     },
    
-	
     "minimum-stability": "dev",
     "require": {
-		"php": ">=5.1.0",
+		
 	},
 	"support": {
 		"issues": "https://github.com/imadige/smceframework-MVC/issues?state=open",
