--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "smce/framework",
     "description": "SmceFramework",
-	"keywords": ["smce", "framework"],
     "license": "MIT",
     "authors": [
         {
@@ -18,6 +17,9 @@
     "require": {
 		
 	},
-	
+	"support": {
+		"issues": "https://github.com/imadige/smceframework-MVC/issues?state=open",
+		"source": "https://github.com/imadige/smceframework-MVC"
+	},
 	
 }
