--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,20 @@
 {
-    "name": "smce/framework",
-    "description": "SmceFramework",
+    "name": "root/smce",
+    "description": "SMCE Framework",
     "license": "MIT",
     "authors": [
         {
-			"name": "Samed Ceylan",
-            "email": "imadige@gmail.com"
-			
         }
     ],
     "autoload": {
-      
+       "psr-2": {
+       }
     },
-   
     "minimum-stability": "dev",
-    "require": {
-		
+    "require": {}
+	
+	"support": {
+		"issues": "https://github.com/imadige/smceframework-MVC/issues?state=open",
+		"source": "https://github.com/imadige/smceframework-MVC"
 	},
-	
-	
 }
