--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
        }
     },
     "minimum-stability": "dev",
-    "require": {}
+    "require": {},
 	
 	"support": {
 		"issues": "https://github.com/imadige/smceframework-MVC/issues?state=open",
