--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,23 @@
 {
     "name": "smce/framework",
     "description": "SmceFramework",
+	"keywords": ["smce", "framework"],
     "license": "MIT",
     "authors": [
         {
         }
     ],
     "autoload": {
-       
+       "psr-2": {
+       }
     },
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+		"php": ">=5.1.0"
+	},
 	
+	"support": {
+		"issues": "https://github.com/imadige/smceframework-MVC/issues?state=open",
+		"source": "https://github.com/imadige/smceframework-MVC"
+	}
 }
