--- a/demo/.htaccess
+++ b/demo/.htaccess
@@ -6,3 +6,4 @@ RewriteCond %{REQUEST_FILENAME} !-d
 
 # otherwise forward it to index.php
 RewriteRule . index.php
+RewriteRule ^(.*)$ index.php?$1 [L,NC]
