--- a/demo/.htaccess
+++ b/demo/.htaccess
@@ -5,5 +5,6 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
 # otherwise forward it to index.php
-RewriteRule . index.php
+
+# RewriteRule . index.php
 RewriteRule ^(.*)$ index.php?$1 [L,NC]
