--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "smce/framework",
     "description": "SmceFramework",
-	"keywords": ["smce", "framework"],
+	"keywords": ["smce", "framework", "smce framework", "smceframework", "mvc"],
     "license": "MIT",
     "authors": [
         {
