--- a/demo/web.config
+++ b/demo/web.config
@@ -4,12 +4,8 @@
         <rewrite>
             <rules>
                 <rule name="RewriteHome" stopProcessing="true">
-                    <match url="^(.*)$" ignoreCase="false" />
-                    <conditions>
-                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-                    </conditions>
-                    <action type="Rewrite" url="index.php" appendQueryString="true" />
+                    <match url="^(.*)$"  ignoreCase="true" />
+					<action type="Rewrite" url="/index.php?page={R:1}"  appendQueryString="true" />
                 </rule>
             </rules>
         </rewrite>
