--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         {
 			"name": "Samed Ceylan",
 			"email": "imadige@gmail.com",
-			"homepage": "http://www.surferwins.com",
+			"homepage": "http://www.samedceylan.com",
 			"role": "Developer"
         }
     ],
