--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ php:
 
 before_script:
  - git submodule --quiet update --init --recursive
- - (cd ext; export CFLAGS="-g3 -O1 -std=gnu90 -Wall -Werror -Wno-error=uninitialized"; phpize && sudo ./configure --enable-smceframework && make && sudo make install && service apache2 restart)
+ - (cd build; export CFLAGS="-g3 -O1 -std=gnu90 -Wall -Werror -Wno-error=uninitialized"; phpize && sudo ./configure --enable-smceframework && make && sudo make install && service apache2 restart)
  - ulimit -c unlimited || true
 
