--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ php:
 
 
 before_script:
- - phpenv config-add phpconfig.ini
+  - composer install --dev
  - git submodule --quiet update --init --recursive
  - (cd build; export CFLAGS="-g3 -O1 -std=gnu90 -Wall -Werror -Wno-error=uninitialized"; phpize && sudo ./configure --enable-smceframework && make && sudo make install)
  - ulimit -c unlimited || true
