--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ php:
 
 before_script:
  - composer install --dev
+ - sudo apt-get install php5-dev
  - (cd build; phpize && sudo ./configure --enable-smceframework && make && sudo make install )
  - ulimit -c unlimited || true
 
